--- a/deploy/enabled/label-ht.yaml
+++ b/deploy/enabled/label-ht.yaml
@@ -1,8 +1,22 @@
+---
 apiVersion: v1
 kind: Node
 metadata:
   labels:
     node-role.kubernetes.io/ht: ""
   name: openshift-worker-0
-  annotations: 
-    argocd.argoproj.io/compare-options: IgnoreExtraneous
+---
+apiVersion: v1
+kind: Node
+metadata:
+  labels:
+    node-role.kubernetes.io/standard: ""
+  name: openshift-worker-1
+---
+apiVersion: v1
+kind: Node
+metadata:
+  labels:
+    node-role.kubernetes.io/standard: ""
+  name: openshift-worker-2
+---
