--- a/deploy/enabled/kustomization.yaml
+++ b/deploy/enabled/kustomization.yaml
@@ -4,3 +4,7 @@ resources:
   - mcp-worker-standard.yaml
   - performance/performance_profile_ht.yaml
   - label-ht.yaml
+  - sriov/sriov-network-node-policy-mlx-netdevice.yaml
+  - sriov/sriov-network-node-policy-mlx-vfio.yaml
+  - sriov/sriovoperatorconfig.yaml
+
