--- a/cnf-operators.yaml
+++ b/cnf-operators.yaml
@@ -3,6 +3,10 @@ kind: Application
 metadata:
   name: cnf-operators
   namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 operation:
   initiatedBy:
     automated: true
