Added postsync hook
Signed-off-by: Alberto Losada <alosadag@redhat.com>

--- a/deploy/enabled/cnv/04-cnv-operator.yaml
+++ b/deploy/enabled/cnv/04-cnv-operator.yaml
@@ -3,5 +3,7 @@ kind: HyperConverged
 metadata:
   name: kubevirt-hyperconverged
   namespace: openshift-cnv
+  annotations:
+    argocd.argoproj.io/hook: PostSync
 spec:
   BareMetalPlatform: true
