--- a/deploy/enabled/cnv/04-cnv-operator.yaml
+++ b/deploy/enabled/cnv/04-cnv-operator.yaml
@@ -6,5 +6,6 @@ metadata:
   annotations:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
     argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   BareMetalPlatform: true
