--- a/deploy/enabled/cnv/04-cnv-operator.yaml
+++ b/deploy/enabled/cnv/04-cnv-operator.yaml
@@ -8,4 +8,4 @@ metadata:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/sync-wave: "5"
 spec:
-  BareMetalPlatform: true
+  bareMetalPlatform: true
