--- a/deploy/enabled/kustomization.yaml
+++ b/deploy/enabled/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - sriov/sriov-network-node-policy-mlx-netdevice.yaml
   - sriov/sriov-network-node-policy-mlx-vfio.yaml
   - sriov/sriovoperatorconfig.yaml
-
+  - cnv/nncp-standard-bond0.yaml
