--- a/deploy/enabled/kustomization.yaml
+++ b/deploy/enabled/kustomization.yaml
@@ -1,4 +1,5 @@
-# TODO handle namespace with var
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
   - mcp-worker-ht.yaml
   - mcp-worker-standard.yaml
