--- a/deploy/enabled/sriov/sriovoperatorconfig.yaml
+++ b/deploy/enabled/sriov/sriovoperatorconfig.yaml
@@ -2,6 +2,8 @@ apiVersion: sriovnetwork.openshift.io/v1
 kind: SriovOperatorConfig
 metadata:
   name: default
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   configDaemonNodeSelector:
     node-role.kubernetes.io/ht: ""
