--- a/deploy/enabled/kustomization.yaml
+++ b/deploy/enabled/kustomization.yaml
@@ -7,3 +7,6 @@ resources:
 - sriov/sriov-network-node-policy-mlx-vfio.yaml
 - sriov/sriovoperatorconfig.yaml
 - cnv/nncp-standard-bond0.yaml
+- auth/htpass-secret.yaml
+- auth/oauth.yaml
+
