--- a/deploy/enabled/auth/htpass-secret.yaml
+++ b/deploy/enabled/auth/htpass-secret.yaml
@@ -5,4 +5,6 @@ kind: Secret
 metadata:
   name: htpass-secret
   namespace: openshift-config
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
 type: Opaque
