--- a/deploy/enabled/monitoring/cluster-monitoring-config.yaml
+++ b/deploy/enabled/monitoring/cluster-monitoring-config.yaml
@@ -8,5 +8,5 @@ data:
     enableUserWorkload: true 
     prometheusK8s:
       externalLabels:
-        cluster: ericsson.lab.bos.redhat.com
+        clustername: ericsson.lab.bos.redhat.com
 
