--- a/sno-4.8/enabled/cnv/04-cnv-operator.yaml
+++ b/sno-4.8/enabled/cnv/04-cnv-operator.yaml
@@ -6,5 +6,6 @@ metadata:
   annotations:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
     argocd.argoproj.io/sync-wave: "5"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   bareMetalPlatform: true
