--- a/deploy/enabled/sriov/sriov-network-node-policy-intel-vfio.yaml
+++ b/deploy/enabled/sriov/sriov-network-node-policy-intel-vfio.yaml
@@ -3,7 +3,7 @@ kind: SriovNetworkNodePolicy
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
-  name: sriov-networknodepolicy-vfio-mlx-ens5f1
+  name: sriov-networknodepolicy-vfio-intel-ens1f1
   namespace: openshift-sriov-network-operator
 spec:
   deviceType: netdevice
@@ -11,13 +11,13 @@ spec:
   linkType: eth
   mtu: 1500
   nicSelector:
-    pfNames: ["ens5f1#16-31"] 
+    pfNames: ["ens1f1#16-31"] 
     rootDevices:
-    - "0000:3b:00.1"
-    vendor: "15b3"
-    deviceID: "1015"
+    - "0000:12:00.1"
+    vendor: "8086"
+    deviceID: "158b"
   nodeSelector:
-    node-role.kubernetes.io/ht: ""
+    node-role.kubernetes.io/master: ""
   numVfs: 32
   priority: 10
-  resourceName: sriov_vfio_ens5f1_mlxnic
+  resourceName: sriov_vfio_ens1f1_intelnic
