--- a/deploy/enabled/kustomization.yaml
+++ b/deploy/enabled/kustomization.yaml
@@ -1,12 +1,9 @@
 resources:
-- mcp-worker-ht.yaml
-- mcp-worker-standard.yaml
 - performance/performance_profile_ht.yaml
-- label-ht.yaml
-- sriov/sriov-network-node-policy-mlx-netdevice.yaml
-- sriov/sriov-network-node-policy-mlx-vfio.yaml
+- sriov/sriov-network-node-policy-intel-netdevice.yaml
+- sriov/sriov-network-node-policy-intel-vfio.yaml
 - sriov/sriovoperatorconfig.yaml
-- cnv/nncp-standard-bond0.yaml
 - auth/htpass-secret.yaml
 - auth/oauth.yaml
-
+#- monitoring/alertmanager-main.yaml
+#- monitoring/cluster-monitoring-config.yaml
