--- a/deploy/enabled/performance/performance_profile_sno_cnfdb1.yaml
+++ b/deploy/enabled/performance/performance_profile_sno_cnfdb1.yaml
@@ -1,11 +1,11 @@
 apiVersion: performance.openshift.io/v1alpha1
 kind: PerformanceProfile
 metadata:
-  name: ht
+  name: sno-cnfdb1 
 spec:
   cpu:
-    isolated: "1-25,27-51,53-77,79-103"
-    reserved: "0,52,26,78"
+    isolated: "2-39,42-79"
+    reserved: "0-1,40-41"
   hugepages:
     defaultHugepagesSize: 1G
     pages:
@@ -16,7 +16,7 @@ spec:
       size: 1G
       node: 1
   nodeSelector:
-    node-role.kubernetes.io/ht: ""
+    node-role.kubernetes.io/master: ""
   numa:
     topologyPolicy: single-numa-node
   realTimeKernel:
