--- a/deploy/enabled/auth/htpass-secret.yaml
+++ b/deploy/enabled/auth/htpass-secret.yaml
@@ -7,5 +7,5 @@ metadata:
   namespace: openshift-config
   annotations:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
-    argocd.argoproj.io/sync-options: Replace=true
+    argocd.argoproj.io/sync-options: PruneLast=true
 type: Opaque
