--- a/deploy/enabled/sriov/sriovoperatorconfig.yaml
+++ b/deploy/enabled/sriov/sriovoperatorconfig.yaml
@@ -2,6 +2,7 @@ apiVersion: sriovnetwork.openshift.io/v1
 kind: SriovOperatorConfig
 metadata:
   name: default
+  namespace: openshift-sriov-network-operator
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 spec:
