--- a/deploy/enabled/performance/performance_profile_ht.yaml
+++ b/deploy/enabled/performance/performance_profile_ht.yaml
@@ -4,8 +4,8 @@ metadata:
   name: ht
 spec:
   cpu:
-    isolated: "1-25,27-51,53-77,79-103"
-    reserved: "0,52,26,78"
+    isolated: "2-25,28-51,54-77,80-103"
+    reserved: "0-1,52-53,26-27,78-79"
   hugepages:
     defaultHugepagesSize: 1G
     pages:
