--- a/deploy/4.6/enabled/cnv/03-cnv-subscription.yaml
+++ b/deploy/4.6/enabled/cnv/03-cnv-subscription.yaml
@@ -8,5 +8,5 @@ spec:
   source: redhat-operators
   sourceNamespace: openshift-marketplace
   name: kubevirt-hyperconverged
-  startingCSV: kubevirt-hyperconverged-operator.v2.5.5
-  channel: stable
+  startingCSV: kubevirt-hyperconverged-operator.v2.5.6
+  channel: "stable"
