changing folder structure

--- a/deploy/4.6/enabled/cnv/03-cnv-subscription.yaml
+++ b/deploy/4.6/enabled/cnv/03-cnv-subscription.yaml
@@ -3,6 +3,8 @@ kind: Subscription
 metadata:
   name: hco-operatorhub
   namespace: openshift-cnv
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   installPlanApproval: Automatic
   source: redhat-operators
