--- a/deploy/4.6/enabled/cnv/02-cnv-operatorgroup.yaml
+++ b/deploy/4.6/enabled/cnv/02-cnv-operatorgroup.yaml
@@ -3,6 +3,8 @@ kind: OperatorGroup
 metadata:
   name: kubevirt-hyperconverged-group
   namespace: openshift-cnv
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   targetNamespaces:
     - openshift-cnv
