--- a/deploy/4.6/enabled/cnv/04-cnv-operator.yaml
+++ b/deploy/4.6/enabled/cnv/04-cnv-operator.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kubevirt-hyperconverged
   namespace: openshift-cnv
   annotations:
-#   argocd.argoproj.io/compare-options: IgnoreExtraneous
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
     argocd.argoproj.io/sync-wave: "2"
 spec:
   bareMetalPlatform: true
