--- a/deploy/enabled/mcp-worker-ht.yaml
+++ b/deploy/enabled/mcp-worker-ht.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: openshift-machine-config-operator
   labels:
     machineconfiguration.openshift.io/role: ht
+    pools.operator.machineconfiguration.openshift.io/ht: ""
 spec:
   paused: false
   machineConfigSelector:
