--- a/cnf-ericsson.yaml
+++ b/cnf-ericsson.yaml
@@ -20,3 +20,9 @@ spec:
   syncPolicy:
     automated:
       selfHeal: true
+  ignoreDifferences:
+  - kind: Secret
+    name: v4-0-config-user-idp-0-file-data
+    namespace: openshift-authentication
+    jsonPointers:
+    - /
