--- a/deploy/4.7/enabled/sriov/03-sriov-subscription.yaml
+++ b/deploy/4.7/enabled/sriov/03-sriov-subscription.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sriov-network-operator-subscription
   namespace: openshift-sriov-network-operator
 spec:
-  channel: "4.8"
+  channel: "4.7"
   name: sriov-network-operator
-  source: ocp4-index
+  source: redhat-operators
   sourceNamespace: openshift-marketplace
