--- a/deploy/4.7/enabled/performance/performance_profile_ht.yaml
+++ b/deploy/4.7/enabled/performance/performance_profile_ht.yaml
@@ -1,8 +1,9 @@
-apiVersion: performance.openshift.io/v1alpha1
+apiVersion: performance.openshift.io/v2
 kind: PerformanceProfile
 metadata:
   name: ht
 spec:
+  globallyDisableIrqLoadBalancing: true
   cpu:
     isolated: "2-25,28-51,54-77,80-103"
     reserved: "0-1,52-53,26-27,78-79"
