--- a/deploy/4.7/enabled/cnv/nncp-standard-bond0.yaml
+++ b/deploy/4.7/enabled/cnv/nncp-standard-bond0.yaml
@@ -2,6 +2,8 @@ apiVersion: nmstate.io/v1alpha1
 kind: NodeNetworkConfigurationPolicy
 metadata:
   name: bond0-eno1-eno2-dhcp-9000
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   nodeSelector:
     node-role.kubernetes.io/standard: ""
