--- a/deploy/4.7/enabled/performance/03-pao-subscription.yaml
+++ b/deploy/4.7/enabled/performance/03-pao-subscription.yaml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: openshift-performance-addon-operator-subscription
-  namespace: openshift-performance-addon-operator
+  namespace: redhat-operators
 spec:
   channel: "4.7" 
   name: performance-addon-operator
