--- a/deploy/4.7/enabled/cnv/04-cnv-operator.yaml
+++ b/deploy/4.7/enabled/cnv/04-cnv-operator.yaml
@@ -6,4 +6,5 @@ metadata:
   annotations:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
     argocd.argoproj.io/sync-wave: "2"
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
