--- a/deploy/4.7/enabled/nmstate/03-nmstate-subscription.yaml
+++ b/deploy/4.7/enabled/nmstate/03-nmstate-subscription.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: openshift-nmstate 
 spec:
   channel: "4.7" 
-  name: nmstate-operator
+  name: kubernetes-nmstate-operator
   source: redhat-operators 
   sourceNamespace: openshift-marketplace
