--- a/deploy/4.7/enabled/auth/htpass-secret.yaml
+++ b/deploy/4.7/enabled/auth/htpass-secret.yaml
@@ -7,4 +7,5 @@ metadata:
   namespace: openshift-config
   annotations:
     argocd.argoproj.io/compare-options: IgnoreExtraneous
+    argocd.argoproj.io/sync-options: Prune=false
 type: Opaque
