--- a/deploy/4.7/enabled/nmstate/nncp-standard-bond0.yaml
+++ b/deploy/4.7/enabled/nmstate/nncp-standard-bond0.yaml
@@ -1,4 +1,4 @@
-apiVersion: nmstate.io/v1alpha1
+apiVersion: nmstate.io/v1beta1
 kind: NodeNetworkConfigurationPolicy
 metadata:
   name: bond0-eno1-eno2-dhcp-9000
