--- a/deploy/4.7/enabled/kustomization.yaml
+++ b/deploy/4.7/enabled/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - sriov/sriov-network-node-policy-mlx-netdevice.yaml
 - sriov/sriov-network-node-policy-mlx-vfio.yaml
 - sriov/sriovoperatorconfig.yaml
+- nmstate/nmstate-instance.yaml
 - nmstate/nncp-standard-bond0.yaml
 - auth/htpass-secret.yaml
 - auth/oauth.yaml
