--- a/deploy/sno/4.8/enabled/nmstate/02-nmstate-operatorgroup.yaml
+++ b/deploy/sno/4.8/enabled/nmstate/02-nmstate-operatorgroup.yaml
@@ -1,8 +1,8 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: ptp-operators
-  namespace: openshift-ptp
+  name: openshift-nmstate-operator
+  namespace: openshift-nmstate
 spec:
   targetNamespaces:
-    - openshift-ptp
+  - openshift-nmstate
