--- a/deploy/sno/4.8/enabled/nmstate/03-nmstate-subscription.yaml
+++ b/deploy/sno/4.8/enabled/nmstate/03-nmstate-subscription.yaml
@@ -1,10 +1,10 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: openshift-performance-addon-operator-subscription
-  namespace: openshift-performance-addon-operator
+  name: openshift-nmstate-operator-subscription
+  namespace: openshift-nmstate 
 spec:
   channel: "4.7" 
-  name: performance-addon-operator
+  name: kubernetes-nmstate-operator
   source: redhat-operators 
   sourceNamespace: openshift-marketplace
