--- a/deploy/sno/4.8/enabled/sriov/03-sriov-subscription.yaml
+++ b/deploy/sno/4.8/enabled/sriov/03-sriov-subscription.yaml
@@ -1,11 +1,10 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: hco-operatorhub
-  namespace: openshift-cnv
+  name: sriov-network-operator-subscription
+  namespace: openshift-sriov-network-operator
 spec:
-  installPlanApproval: Automatic
+  channel: "4.8"
+  name: sriov-network-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  name: kubevirt-hyperconverged
-  channel: stable
