Added workload partitioning

--- a/deploy/sno/4.8/enabled/sriov/01-sriov-namespace.yaml
+++ b/deploy/sno/4.8/enabled/sriov/01-sriov-namespace.yaml
@@ -3,6 +3,8 @@ kind: Namespace
 metadata:
   labels:
     kubernetes.io/metadata.name: openshift-sriov-network-operator
+  annotations:
+    workload.openshift.io/allowed: management
   name: openshift-sriov-network-operator
 spec: {}
 status: {}
