--- a/eric1-sno-4.8.yaml
+++ b/eric1-sno-4.8.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cnf-ericsson
+  name: eric1
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -14,7 +14,7 @@ spec:
   source:
     directory:
       jsonnet: {}
-    path: deploy/4.7/enabled
+    path: deploy/sno/4.8/enabled
     repoURL: https://github.com/alosadagrande/argocd.git
     targetRevision: cnf-ericsson
   syncPolicy:
