--- a/deploy/sno/4.8/enabled/kustomization.yaml
+++ b/deploy/sno/4.8/enabled/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
 #- sriov/sriov-network-node-policy-mlx-vfio.yaml
 #- nmstate/nncp-standard-bond0.yaml
 - machineconfigs/99-master-ssh.yaml
+- machineconfigs/99-master-chrony-configuration.yaml
 - monitoring/alertmanager-main.yaml
 - monitoring/cluster-monitoring-config.yaml
