--- a/deploy/sno/4.8/enabled/performance/performance-profile-sno.yaml
+++ b/deploy/sno/4.8/enabled/performance/performance-profile-sno.yaml
@@ -7,14 +7,9 @@ spec:
   - audit=0
   - mce=off
   - nmi_watchdog=0
-  hugepages:
-    defaultHugepagesSize: 1G
-    pages:
-    - count: 4 
-      size: 1G
   cpu:
-    isolated: 2-15,18-19,22-23,26-31
-    reserved: 0-1,16-17,20-21,24-25
+    isolated: 4-39,44-79
+    reserved: 0-3,40-43
   machineConfigPoolSelector:
     pools.operator.machineconfiguration.openshift.io/master: ""
   net:
@@ -24,4 +19,4 @@ spec:
   numa:
     topologyPolicy: single-numa-node
   realTimeKernel:
-    enabled: false 
+    enabled: false
