--- a/deploy/sno/4.8/enabled/monitoring/cluster-monitoring-config.yaml
+++ b/deploy/sno/4.8/enabled/monitoring/cluster-monitoring-config.yaml
@@ -8,5 +8,5 @@ data:
     enableUserWorkload: true 
     prometheusK8s:
       externalLabels:
-        clustername: ericsson.lab.bos.redhat.com
+        clustername: eric1.lab.bos.redhat.com
 
