--- a/deploy/4.8/enabled/performance/03-pao-subscription.yaml
+++ b/deploy/4.8/enabled/performance/03-pao-subscription.yaml
@@ -1,10 +1,11 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: openshift-performance-addon-operator-subscription
+  name: performance-addon-operator
   namespace: openshift-operators
 spec:
+  installPlanApproval: Automatic
   channel: "4.8" 
   name: performance-addon-operator
-  source: performance-addon-operator
+  source: redhat-operators
   sourceNamespace: openshift-marketplace
