--- a/deploy/4.8/enabled/performance/03-pao-subscription.yaml
+++ b/deploy/4.8/enabled/performance/03-pao-subscription.yaml
@@ -1,11 +1,12 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: performance-addon-operator
-  namespace: openshift-operators
+  name: openshift-performance-addon-operator-subscription
+  namespace: openshift-performance-addon-operator
 spec:
   installPlanApproval: Automatic
   channel: "4.8" 
   name: performance-addon-operator
   source: redhat-operators
-  sourceNamespace: openshift-marketplace
+  sourceNamespace: openshift-marketplac
+
