--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,2 +1,8 @@
+---
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+bases:
+  -  github.com/alosadagrande/argocd?ref=main
 resources:
-- cnf-ericsson-4.8.yaml
+  - cnf-ericsson-4.8.yaml
