added config to the app

--- a/cnf-ericsson-4.8.yaml
+++ b/cnf-ericsson-4.8.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cnf-ericsson
+  name: cnf-ericsson-config
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
