--- a/cnf-operators-4.8.yaml
+++ b/cnf-operators-4.8.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cnf-operators
+  name: cnf-operators-48
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
