--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -3,4 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - cnf-operators-4.8.yaml
+#  - cnf-operators-4.8.yaml
+  - cnf-operators-sno-4.8.yaml
