--- a/eric1-sno-4.8.yaml
+++ b/eric1-sno-4.8.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: eric1
+  name: eric1-config
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
