--- a/deploy/sno/4.8/enabled/performance/03-pao-subscription.yaml
+++ b/deploy/sno/4.8/enabled/performance/03-pao-subscription.yaml
@@ -2,9 +2,11 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: openshift-performance-addon-operator-subscription
-  namespace: openshift-operators
+  namespace: openshift-performance-addon-operator
 spec:
+  installPlanApproval: Automatic
   channel: "4.8" 
   name: performance-addon-operator
-  source: performance-addon-operator
+  source: redhat-operators
   sourceNamespace: openshift-marketplace
+
